# ARTEMIS

./: .gitignore  Dockerfile  OPERATOR_README.md  README.md  README_BENCHMARK.md  benchmark_runner.py  codex-health-monitor.py  codex-root-dir-config.toml  compare_flags.py  config.yaml  config_example.yaml  cybench_runner.py  health-monitor-config.json  pyproject.toml  setup_benchmark_env.sh  start-codex-with-monitoring.sh
codex-rs/cli/: Cargo.toml
codex-rs/cli/src/: main.rs
supervisor/: .env.example  pyproject.toml  startup_cmd.txt  supervisor.py
supervisor/codex_supervisor/: context_manager.py  orchestrator.py  supervisor.py  todo_generator.py  tools.py
supervisor/codex_supervisor/orchestration/: __init__.py  instance_manager.py  log_reader.py  orchestrator.py  prompt_generator.py  router.py  vulnerability_deepdive_manager.py
supervisor/codex_supervisor/prompts/: router_prompt.py  summarization_prompt.txt  supervisor_prompt.py  vulnerability_deepdive_prompt.py
supervisor/codex_supervisor/submissions/: __init__.py  cybench.py  xbow_validation.py
supervisor/codex_supervisor/triage/: triage_manager.py  triage_tools.py
supervisor/codex_supervisor/triage/prompts/: initial_review_prompt.py  severity_prompt.py  system_prompt.py
supervisor/configs/: config.yaml
supervisor/logs/supervisor_session_1753984987/workspaces/recon/logs/supervisor_session_1753984987/workspaces/recon/recon/: 240_testssl.txt
supervisor/orchestration/: orchestrator.py
supervisor/tests/: sample_todos.json  test_hierarchical_todos.py  test_todo_generation.py  test_web_search.py
(+88 files in other folders)
