[project]
name = "codex-supervisor"
version = "0.1.0"
description = "AI Security Testing Supervisor for Codex instances"
dependencies = [
    "openai>=1.0.0",
    "pyyaml>=6.0",
    "psutil>=5.9.0",
    "aiofiles>=24.0.0",
    "pytz>=2023.3",
    "python-dotenv>=1.0.0",
    "tiktoken>=0.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["codex_supervisor"]

[project.scripts]
codex-supervisor = "codex_supervisor.supervisor:cli_main"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]